# nackademin-mcp-demo

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  server.py  setup.sh
calculator_mcp/: calculator_mcp.py
study_tools_mcp/: study_tools.py
weather_mcp/: weather_server.py
